[project]
name = "stepic-langchain"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey",email = "70944468+Alexey-Samodurov@users.noreply.github.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^2.3.0"
python-dotenv = "^1.1.1"
langchain-openai = "^0.3.35"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
